tests/sksl/errors/UseWithoutInitializeReturnValue.glsl
### Compilation failed:

error: 1: 'r' has not been assigned
1 error
